syntax = "proto3";

package academics.api.v1;

import "google/protobuf/timestamp.proto";

option go_package = "semaphore/academics/academics/v1;academicsv1";

message Course {
  string id = 1;
  string school_id = 2;
  string name = 3;
  google.protobuf.Timestamp start_at = 4;
  google.protobuf.Timestamp end_at = 5;
  bool is_online = 6;
  int32 signature_closing_delay_minutes = 7;
  bool signature_closed = 8;
}

message GetCourseRequest { string course_id = 1; }
message GetCourseResponse { Course course = 1; }

message ValidateTeacherCourseRequest {
  string teacher_id = 1;
  string course_id = 2;
}
message ValidateTeacherCourseResponse { bool is_assigned = 1; }

message ValidateStudentCourseRequest {
  string student_id = 1;
  string course_id = 2;
}
message ValidateStudentCourseResponse {
  bool is_allowed = 1;
  repeated string matched_group_ids = 2;
}

message ValidateClassroomCourseRequest {
  string classroom_id = 1;
  string course_id = 2;
}
message ValidateClassroomCourseResponse { bool is_linked = 1; }

message ListStudentGroupIdsRequest {
  repeated string student_ids = 1;
  string school_id = 2;
}

message StudentGroupIdsByStudent {
  string student_id = 1;
  repeated string group_ids = 2;
}

message ListStudentGroupIdsResponse {
  repeated StudentGroupIdsByStudent students = 1;
}

message SchoolPreferences {
  string id = 1;
  int32 default_signature_closing_delay_minutes = 2;
  bool teacher_can_modify_closing_delay = 3;
  bool students_can_sign_before_teacher = 4;
  bool enable_flash = 5;
  bool disable_course_modification_from_ui = 6;
  bool enable_nfc = 7;
}

message GetSchoolPreferencesRequest { string school_id = 1; }
message GetSchoolPreferencesResponse { SchoolPreferences preferences = 1; }

message CloseExpiredCoursesRequest {
  google.protobuf.Timestamp now = 1;
}

message CloseExpiredCoursesResponse {
  int64 closed_count = 1;
}

// AcademicsQueryService exposes read-only academic data.
service AcademicsQueryService {
  // GetCourse returns a course by id.
  rpc GetCourse(GetCourseRequest) returns (GetCourseResponse);
  // ValidateTeacherCourse checks if a teacher is assigned to a course.
  rpc ValidateTeacherCourse(ValidateTeacherCourseRequest) returns (ValidateTeacherCourseResponse);
  // ValidateStudentCourse checks if a student can access a course.
  rpc ValidateStudentCourse(ValidateStudentCourseRequest) returns (ValidateStudentCourseResponse);
  // ValidateClassroomCourse checks if a classroom is linked to a course.
  rpc ValidateClassroomCourse(ValidateClassroomCourseRequest) returns (ValidateClassroomCourseResponse);
  // ListStudentGroupIds returns group ids for a list of students.
  rpc ListStudentGroupIds(ListStudentGroupIdsRequest) returns (ListStudentGroupIdsResponse);
  // GetSchoolPreferences returns school-level preferences.
  rpc GetSchoolPreferences(GetSchoolPreferencesRequest) returns (GetSchoolPreferencesResponse);
}

// AcademicsCommandService exposes write/command operations.
service AcademicsCommandService {
  // CloseExpiredCourses closes courses past their signature delay.
  rpc CloseExpiredCourses(CloseExpiredCoursesRequest) returns (CloseExpiredCoursesResponse);
}
